--- a/angular_app/src/app/item/item.component.html
+++ b/angular_app/src/app/item/item.component.html
@@ -1,6 +1,6 @@
 <!--Child component-->
 <div>
-    <h6>WhishList</h6>
+    <h6>Saved Items</h6>
     <ul>
         <li>Mobile</li>
         <li>Laptop</li>
