--- a/angular_app/src/app/feedback/feedback.component.html
+++ b/angular_app/src/app/feedback/feedback.component.html
@@ -1,7 +1,8 @@
 <div>
 <br>
 <label style="margin-left: 10px;"><b>Enter Your feddback</b></label><br>
+ <!--Two way binding-->
 <input type="text"  [(ngModel)]="feedback" style="margin-left: 10px;"><br><br>
 <span  style="margin-left: 10px;">Your feedback: {{feedback}}</span><br><br>
-<button (click)="msg()">Submit</button>
+<button (click)="msg()">Submit</button><!--event binding-->
 </div>
