--- a/angular_app/src/app/nav/nav.component.html
+++ b/angular_app/src/app/nav/nav.component.html
@@ -17,7 +17,9 @@
           <li class="nav-item">
             <a class="nav-link" href="#">Profile</a>
           </li>
-          
+          <li class="nav-item">
+            <a class="nav-link" routerLink="wishlist">Cart</a>
+          </li>   
           
         </ul>
         <form class="d-flex">
