--- a/angular_app/src/app/home/home.component.html
+++ b/angular_app/src/app/home/home.component.html
@@ -6,13 +6,13 @@
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="../../assets/mobile.jfif" class="d-block w-100 carouselimg" alt="mobile">
+        <img src="assets/mobile.jfif" class="d-block w-100 carouselimg" alt="mobile">
       </div>
       <div class="carousel-item">
-        <img src="../../assets/flipkart2.jfif" class="d-block w-100 carouselimg" alt="dress">
+        <img src="assets/flipkart2.jfif" class="d-block w-100 carouselimg" alt="dress">
       </div>
       <div class="carousel-item">
-        <img src="../../assets/watch.jfif" class="d-block w-100 carouselimg" alt="watch">
+        <img src="assets/watch.jfif" class="d-block w-100 carouselimg" alt="watch">
       </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
