--- a/angular_app/src/app/products/products.component.css
+++ b/angular_app/src/app/products/products.component.css
@@ -1,7 +1,8 @@
-h2{
+h5{
     text-align: center;
-    color: brown;
-    text-shadow: 2px 3px 2px darkblue;
+    color:crimson;
+    /* text-shadow: 2px 3px 2px darkblue; */
+    background-color: cornflowerblue;
 }
 
 img{
@@ -9,8 +10,8 @@ img{
     width:200px;
     margin-top: 10px;
     margin-bottom: 10px;
-    margin-left: 55px;
+    margin-left: 20%;
     border-radius: 10px;
-
 }
+
 
