--- a/angular_app/src/app/products/products.component.html
+++ b/angular_app/src/app/products/products.component.html
@@ -1,34 +1,28 @@
 
 <div class="container">
-    <h2>Product List</h2>
-    
     <div class="row">
-        <div class="col-12 col-md-6 col-lg-4">
-            <div *ngFor="let product of productdetails" [ngSwitch]="product.Status" >
-            <div class="card mr-3" style="border: 1.5px solid darkslategrey">
-                <img  [src]="product.image" class="card-img-top" alt="product"/>
-                <div class="card-body">
-                    <div class="data" *ngSwitchCase="'In Stock'" class="text-success">
-                        {{product.pid}}
-                        <br>
-                        {{product.pname}} 
-                        <br>
-                        {{product.pdescription}}
-                        <br>
-                        {{product.Status}}
+        <div class="col col-sm-6 col-md-4" *ngFor="let product of productdetails" [ngSwitch]="product.Status">
+            <div class="card mt-3 mb-3" style="border: 1.5px solid darkslategrey;">
+                    <img  [src]="product.image" class="card-img-top" alt="product"/>
+                    <div class="card-body" *ngSwitchCase="'In Stock'" >
+                        <h5>{{product.pid}}: {{product.pname}} </h5>
+                        <p [style.color]="'darkblue'" [style.font-size.px]="'15'" [style.background-color]="'lightpink'">
+                            {{product.pdescription}}
+                        </p>
+                        <div class="text-success" style="text-align: center;">
+                            <b>{{product.Status}}</b>
+                        </div>
                     </div>
-                    <div class="data" *ngSwitchDefault class="text-danger">
-                        {{product.pid}}
-                        <br>
-                        {{product.pname}} 
-                        <br>
-                        {{product.pdescription}}
-                        <br>
-                        {{product.Status}}
+                    <div class="card-body" *ngSwitchDefault>
+                        <h5>{{product.pid}}: {{product.pname}}</h5>
+                        <p [style.color]="'darkblue'" [style.font-size.px]="'15'" [style.background-color]="'pink'">
+                            {{product.pdescription}}
+                        </p>
+                        <div class="text-danger" style="text-align: center;">
+                           <b> {{product.Status}}</b>
+                        </div>
                     </div>
-                </div>
             </div>
         </div>
-    </div>
     </div>
 </div>
