--- a/angular_app/src/app/products/products.component.css
+++ b/angular_app/src/app/products/products.component.css
@@ -5,6 +5,15 @@ h5{
     background-color: cornflowerblue;
 }
 
+.card{
+    background-color: floralwhite;
+}
+
+.card:hover{
+    background-color:darkseagreen;
+    transform: scaleY(1.1);
+}
+
 img{
     height:150px;
     width:200px;
@@ -12,6 +21,10 @@ img{
     margin-bottom: 10px;
     margin-left: 20%;
     border-radius: 10px;
+}
+p{
+    padding-left: 5px;
+    padding-right: 5px;
 }
 
 
