--- a/angular_app/src/app/nav/nav.component.html
+++ b/angular_app/src/app/nav/nav.component.html
@@ -19,7 +19,18 @@
           </li>
           <li class="nav-item">
             <a class="nav-link" routerLink="wishlist">Cart</a>
-          </li>   
+          </li>  
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Trending Items
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <li><a class="dropdown-item" routerLink="dress">Dresses</a></li>
+              <li><a class="dropdown-item" href="#">Mobile</a></li>
+              <li><hr class="dropdown-divider"></li>
+              <li><a class="dropdown-item" href="#">Something else here</a></li>
+            </ul>
+          </li> 
           
         </ul>
         <form class="d-flex">
