--- a/angular_app/src/app/card/card.component.html
+++ b/angular_app/src/app/card/card.component.html
@@ -1,11 +1,16 @@
 <div class="container">
     <div class="row">
-        <div class="col col-md-9" *ngFor="let p of product">
+        <div class="col col-md-9">
             <div class="card mt-4" style="border-radius: 30px;">
-                    <img  [src]="p.image" class="card-img-top" alt="product"/>
+                    <img  [src]="product.image" class="card-img-top" alt="product"/>
                     <div class="card-body" >
-                        <h6>{{p.pid}}: {{p.pname}} </h6>
-                        
+                        <h6>{{product.pid}}: {{product.pname}} 
+                            <span (click)="  showproductToggle()" [ngClass]="toggleContent()"></span>
+                        </h6>  
+                        <div [hidden]="productDetail" style="color: darkred; text-align:center">
+                            Price: <b>{{product.price | currency:'INR'}}</b>
+                            <br>
+                        </div>
                     </div>
             </div>
         </div>
