--- a/angular_app/src/app/card/card.component.html
+++ b/angular_app/src/app/card/card.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="row">
-        <div class="col col-md-9">
+        <div class="col col-md-10">
             <div class="card mt-4" style="border-radius: 30px;">
                     <img  [src]="product.image" class="card-img-top" alt="product"/>
                     <div class="card-body" >
@@ -10,6 +10,9 @@
                         <div [hidden]="productDetail" style="color: darkred; text-align:center">
                             Price: <b>{{product.price | currency:'INR'}}</b>
                             <br>
+                            <span style="color: black;">{{product.pdescription}}</span>
+                            <button type="button" class="btn btn-primary" (click)="onclick()"> View Products</button>
+
                         </div>
                     </div>
             </div>
