--- a/angular_app/src/app/card/card.component.css
+++ b/angular_app/src/app/card/card.component.css
@@ -27,5 +27,11 @@ p{
     padding-left: 5px;
     padding-right: 5px;
 }
-
+a{
+    text-decoration: none;
+    color: white;
+}
+button{
+    border-radius: 15px;
+}
 
