--- a/angular_app/src/app/mobile/mobile.component.html
+++ b/angular_app/src/app/mobile/mobile.component.html
@@ -1,5 +1,3 @@
-<!--fetch all the records from fridge property in the .ts file which is accessing the refrigerator.json-->
-<marquee>Super Sale 30% Off</marquee>
 <div >
     <div class="row">
         <!--1st column-->
@@ -9,7 +7,7 @@
 
         <!--2nd column-->
         <div class="card col-lg-6" style="border:none;margin-top: 10px;">
-            <app-dressdetails></app-dressdetails>
+            <app-mobiledisplay></app-mobiledisplay>
         </div>
         <!--3rd column-->
         <div class="col col-lg-3">
