--- a/angular_app/src/app/nav/nav.component.html
+++ b/angular_app/src/app/nav/nav.component.html
@@ -26,9 +26,9 @@
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
               <li><a class="dropdown-item" routerLink="dress">Dresses</a></li>
-              <li><a class="dropdown-item" href="#">Mobile</a></li>
+              <li><a class="dropdown-item" routerLink="mobile">Mobile</a></li>
               <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Something else here</a></li>
+              <li><a class="dropdown-item" routerLink="products">All products</a></li>
             </ul>
           </li> 
           
