--- a/angular_app/src/app/home/home.component.html
+++ b/angular_app/src/app/home/home.component.html
@@ -1,3 +1,6 @@
+<app-suggestion></app-suggestion>
+
+<!-- Carousel -->
 <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-indicators">
       <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -25,4 +28,16 @@
     </button>
   </div>
 
- <app-feedback></app-feedback> 
+      <!--ALERT-->
+      <div class="alert alert-success alert-dismissible fade show" role="alert">
+        Special Offer <strong>Big Sale Flat 40% Off!!!!</strong>  On all new Collections..
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+      </div>
+
+      <!-- Contact -->
+      <app-contact></app-contact>
+  
+ 
+
+
+
