--- a/angular_app/src/app/nav/nav.component.html
+++ b/angular_app/src/app/nav/nav.component.html
@@ -15,7 +15,7 @@
             <a class="nav-link" routerLink="products">Products</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Profile</a>
+            <a class="nav-link" routerLink="#">Register</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" routerLink="wishlist">Cart</a>
@@ -28,7 +28,7 @@
               <li><a class="dropdown-item" routerLink="dress">Dresses</a></li>
               <li><a class="dropdown-item" routerLink="mobile">Mobile</a></li>
               <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" routerLink="products">All products</a></li>
+              <li><a class="dropdown-item" routerLink="appliances">Home Appliances</a></li>
             </ul>
           </li> 
           
