--- a/angular_app/src/app/products/products.component.html
+++ b/angular_app/src/app/products/products.component.html
@@ -1,4 +1,4 @@
-
+<app-suggestion></app-suggestion>
 <div class="container">
     <div class="row">
         <div class="col col-sm-6 col-md-4" *ngFor="let product of productdetails" [ngSwitch]="product.Status">
