--- a/angular_app/src/app/appliances/appliances.component.css
+++ b/angular_app/src/app/appliances/appliances.component.css
@@ -1,7 +1,7 @@
 marquee{
-    text-shadow:2px 3px 3px rgba(251, 226, 3, 0.724);
-    color:rgb(4, 4, 4);
-    font-size: 28px;
+    text-shadow:2px 2px 3px blue;
+    color:darkmagenta;
+    font-size: 18px;
 }
 img{
     height:150px;
