--- a/angular_app/src/app/home/home.component.html
+++ b/angular_app/src/app/home/home.component.html
@@ -34,6 +34,16 @@
         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
       </div>
 
+      <!-- message -->
+      <div class="message">
+        <img class="flipkart"src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQuz69cZcvhs5j6_5oPdznjVziyEPwywtmKmA&usqp=CAU" alt="Flipkart">
+       <p> We are maximisers. We're out on our own journeys to maximise - be the best at what we choose
+         and care about the most - whether it be our impact, voice, potential, ideas, influence, 
+         well-being or more. Because when we maximise ourselves in our inclusive teams, Flipkart is 
+         able to deliver the best imaginable value for our customers, stakeholders and the planet!</p>
+   
+      </div>
+
       <!-- Contact -->
       <app-contact></app-contact>
   
