--- a/angular_app/src/app/counter/counterchild/counterchild.component.html
+++ b/angular_app/src/app/counter/counterchild/counterchild.component.html
@@ -1,10 +1,10 @@
 <div style="margin-top:5px; margin-bottom: 5px;">
     <div>
-        <button class="btn btn-secondary" [disabled]="!countLessThenOne" (click)="decrement();">
+        <button class="btn btn-info" [disabled]="!countLessThenOne" (click)="decrement();" style="border-radius: 30px;">
             <i class="fa-solid fa-minus"></i>
         </button>
         <input type="button" class="btn btn-light" [value]="counterValue" style="color: darkblue;">
-        <button class="btn btn-secondary" (click)="increment();">
+        <button class="btn btn-info" (click)="increment();" style="border-radius: 30px;">
             <i class="fa-solid fa-plus"></i>
         </button>
     </div>
