--- a/angular_app/src/app/appliances/appliances.component.html
+++ b/angular_app/src/app/appliances/appliances.component.html
@@ -24,6 +24,9 @@
                                 <br>
                                 <span style="color: chocolate;">Price: <b>{{ appl.price | currency:'INR'}}</b></span>
                                 <!-- <br> -->
+                                <br><input type="number" name="quantity" [(ngModel)]="quantity" style="width:50px;border-radius:10px;" min="1" max="25">
+                                
+                                <button class="btn btn-success m-2" (click)="addToCart(appl)" style="width:120px;border-radius:10px;">Add to Cart</button>
                                 
                             </div>
                         </div>
