--- a/angular_app/src/app/appliances/appliances.component.html
+++ b/angular_app/src/app/appliances/appliances.component.html
@@ -8,9 +8,9 @@
 
         <!--2nd column-->
 
-            <div class="card  col-md-6" style="border:none;margin-top: 10px;">
+            <div class="card  col-md-6" style="border:none;margin-top: 10px; ">
                 <div class="card-body col-md-12" style="margin-bottom: 10px;">
-                    <div class="row" style="margin-top:10px;border-style:solid;border-radius:15px;"
+                    <div class="row" style="margin-top:10px;border-style:solid;border-radius:15px;background-color: rgb(163, 153, 127);"
                         *ngFor="let appl of appliances">
                         <div class="col col-md-3">
                             <!--Property Binding-->
@@ -24,9 +24,14 @@
                                 <br>
                                 <span style="color: chocolate;">Price: <b>{{ appl.price | currency:'INR'}}</b></span>
                                 <!-- <br> -->
-                                <br><input type="number" name="quantity" [(ngModel)]="quantity" style="width:50px;border-radius:10px;" min="1" max="25">
-                                
-                                <button class="btn btn-success m-2" (click)="addToCart(appl)" style="width:120px;border-radius:10px;">Add to Cart</button>
+                                <div class="row">
+                                    <div class="col col-md-4">
+                                        <app-counterchild (countEmmitter)="receiveValue($event)"></app-counterchild>
+                                    </div>   
+                                    <div class="col col-md-4">
+                                        <button class="btn btn-success m-2" (click)="addToCart(appl)" style="width:120px;border-radius:10px;">Add to Cart</button> 
+                                    </div>
+                                </div>
                                 
                             </div>
                         </div>
