--- a/angular_app/src/app/counter/counter.component.html
+++ b/angular_app/src/app/counter/counter.component.html
@@ -1,4 +1,4 @@
 
-<app-counterchild (countEmmitter)="receiveValue($event)"></app-counterchild>
+<!-- <app-counterchild (countEmmitter)="receiveValue($event)"></app-counterchild> -->
 
 
