--- a/angular_app/src/app/home/home.component.html
+++ b/angular_app/src/app/home/home.component.html
@@ -34,15 +34,60 @@
         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
       </div>
 
+      <!-- Image -->
+    <div class="container">
+      <div class="row">
+      <div class="col-3 col-sm-6 col-md-3 mt-4">
+      <div class="card" style="border: 2px solid goldenrod; " >
+        <img class="card-img-top" src="https://storiesflistgv2.blob.core.windows.net/stories/2017/08/Perfectbuy_banner.jpg" alt="Card image cap" class="cardimg">
+        <div class="card-body">
+          <p class="card-text"style="color: brown">
+            Flipkart Perfect Buy — a one-stop experience for large appliance shopping. Grab the offer!! Hurry up</p>
+        </div>
+      </div>
+      </div>
+      <div class="col-3 col-sm-6 col-md-3 mt-4">
+      <div class="card" style="border: 2px solid goldenrod;  " >
+        <img class="card-img-top" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSQptrY-3AmjDN3S_Q-9oEzPJ9fukpqXk3Unw&usqp=CAU" alt="Card image cap"class="cardimg">
+        <div class="card-body">
+          <p class="card-text"style="color: brown">
+            Flipkart Apple Week sale and samsung summer sale giving deals on smartphones and other products</p>
+        </div>
+      </div>
+      </div>
+      <div class="col-3 col-sm-6 col-md-3 mt-4">
+      <div class="card" style="border: 2px solid goldenrod;  " >
+        <img class="card-img-top" src="https://images.fonearena.com/blog/wp-content/uploads/2016/11/flipkart-everyday-essentials_1.jpg" alt="Card image cap" class="cardimg">
+        <div class="card-body">
+          <p class="card-text" style="color: brown">
+            Flipkart has introduced caters to daily household needs. Dubbed as Everyday Essentials of different sections</p>
+        </div>
+      </div>
+      </div>
+      <div class="col-3 col-sm-6 col-md-3 mt-4">
+      <div class="card" style="border: 2px solid goldenrod;  ">
+        <img class="card-img-top" src="https://www.deccanherald.com/sites/dh/files/styles/largehorizontal/public/articleimages/2020/10/21/flipkart-bbd-last-day-904976-1603257119.jpg?itok=G1B48YEP" alt="Card image cap" class="cardimg">
+        <div class="card-body">
+          <p class="card-text"style="color: brown">
+            
+            Flipkart Big Billion Days October 2020 sale: Top deals on Samsung, Sony, LG smart TVs and more. Hurry Up!!</p>
+        </div>
+      </div>
+      </div>
+      </div>
+      </div>
+
       <!-- message -->
       <div class="message">
-        <img class="flipkart"src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQuz69cZcvhs5j6_5oPdznjVziyEPwywtmKmA&usqp=CAU" alt="Flipkart">
+        <img class="flipkart"src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQuz69cZcvhs5j6_5oPdznjVziyEPwywtmKmA&usqp=CAU" alt="Flipkart" >
        <p> We are maximisers. We're out on our own journeys to maximise - be the best at what we choose
          and care about the most - whether it be our impact, voice, potential, ideas, influence, 
          well-being or more. Because when we maximise ourselves in our inclusive teams, Flipkart is 
          able to deliver the best imaginable value for our customers, stakeholders and the planet!</p>
    
       </div>
+
+      
 
       <!-- Contact -->
       <app-contact></app-contact>
