--- a/angular_app/src/app/home/home.component.css
+++ b/angular_app/src/app/home/home.component.css
@@ -15,3 +15,11 @@
     padding:10px;
     color: brown;
   }
+  .cardimg{
+    height: 150px;
+    width: 255px;
+  }
+  .card:hover{
+    box-shadow: 10px 10px 10px;
+    transform: scaleY(1.1);
+}
