--- a/angular_app/src/app/login/login.component.html
+++ b/angular_app/src/app/login/login.component.html
@@ -4,9 +4,9 @@
           <div class="col-lg-6 col-md-8 mx-auto">
                     <div class="login-form">
                             <form class="mt-5" [formGroup]="loginForm" (ngSubmit)="login()">
-                                <h2 class="text-center secondary ms-mb-m main-heading ng-binding">Login </h2>
+                                <h2 class="text-center secondary ms-mb-m main-heading ng-binding"> User Login </h2>
                                 <br>
-                                <div class="mt-5">
+                                <div class="mt-2">
                                 <div class="form-group">
                                     <input type="email" class="form-control" name="useremail" formControlName="useremail" placeholder="User Email">
                                     <label class="error ng-binding" *ngIf="submitted && f['useremail'].errors?.['required']">Email is required</label>
