--- a/angular_app/src/app/feedback/feedback.component.css
+++ b/angular_app/src/app/feedback/feedback.component.css
@@ -1,12 +1,7 @@
 label{
     color: darkblue;
 }
-div{
-    border: 2px solid black;
-    margin-top: 20px;
-    margin-left: 30%;
-    margin-right: 30%;
-}
+
 button {  
     padding: 5px 15px;
     text-align: center;
@@ -17,3 +12,7 @@ button {
     margin-bottom: 10px;
     margin-left: 10px;
 }
+.cardimg{
+    height: 150px;
+    width: 255px;
+  }
