--- a/angular_app/src/app/nav/nav.component.html
+++ b/angular_app/src/app/nav/nav.component.html
@@ -39,10 +39,17 @@
             <a class="nav-link" routerLink="appliances" *ngIf="auth">Home Appliances</a>
           </li> 
           <li class="nav-item">
+            <a class="nav-link" routerLink="feedback" *ngIf="auth">Feedback</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" routerLink="products" *ngIf="admin">Modify products</a>
           </li>   
+          <li class="nav-item">
+            <a class="nav-link" routerLink="viewfeedback" *ngIf="admin">View Feedback</a>
+          </li>
         </ul>
         
+   
 
         
         <!-- <form class="d-flex">
